# ChessSystem

./: ChessSystem.c  chess  chess.c  chessSystem  chessSystemTestsExample.c  dry.c  dry_mergelisted.c  game.c  game.h  makefile  map.c  player.c  player.h  tournament.c  tournament.h
dry/: READ_ME.txt  dry.c  dry.docx  dry_mergelisted.c  expected_output.txt  mergeSortedListsTest.c  ~$dry.docx
gilad/test/: CMakeLists.txt  CONTRIBUTING.md  README.md  memtest.sh  prepare-submission.sh  test.sh  ubuntu_20_setup.sh  update_from_csl3.sh
gilad/test/src/2-dry/: dry.md
gilad/test/src/chess/: player.h
gilad/test/src/chess/mtm_map/: map.c
gilad/test/src/chess/tests/: .gitignore  chessSystemTestsExample.c
gilad/test/src/tests/: chess_test.cc  map_test.cc  mtm_official_chess_test.cc  test_chess_behaviour.cc  test_map_get_next_allocation_failure.cc
tests/: chessSystemTestsExample2.c  chessSystemTestsExamplemaarouf.c  player_levels_your_output.txt  tournament_statistics_your_output.txt
to submit/: makefile  tournament.h
to_submit/: chess.c  game.c  game.h  makefile  player.c  player.h  tournament.c  tournament.h
your_output/: after_remove.txt  player_levels_all.txt  remove_player_1.txt  test_add_tournament_end_tournament.txt  test_player_level_advanced_add_same_game.txt  test_player_level_advanced_after_remove.txt  test_player_score_2_after_remove.txt  test_player_score_2_after_remove_sys2.txt  test_tournament_remove.txt  tour2_remove_winner.txt  tour3_add_same_game.txt  tournament_statistics_2.txt  tournament_statistics_3.txt  tournament_statistics_your_output.txt  winner_of_tour_2.txt  winner_of_tour_2_sys2.txt
